--- a/lesson1c/style.css
+++ b/lesson1c/style.css
@@ -9,21 +9,21 @@
 /* global config */
 /* When you want to change the default values, please uncomment. */
 /* see https://github.com/hiroppy/fusuma/blob/master/packages/client/assets/style/variables.css */
-/* :root { */
+:root {
 /* --base-font-family: 'Roboto', 'San Francisco', helvetica, arial, sans-serif; */
 /* --base-font-size: 2.4rem; */
 /* --base-font-weight: 300; */
 /* --base-align: center; */
 /* --base-max-width: 1280px; */
 /* --base-outer-margin: 24px; */
-/* --base-image-width: 100%; */
+--base-image-width: 40%;
 /* --base-image-border-radius: 0; */
 /* --h1-font-size: 5.6rem; */
 /* --h2-font-size: 4rem; */
 /* --h3-font-size: 3.6rem; */
 /* --code-font-size: 1.8rem; */
 /* --account-icon-size: 3rem; */
-/* } */
+}
 
 .title {
 }
